[package]
name = "shoom_rs"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "an extremely small library for creating & opening shared memory on Windows, and macOS."

[dependencies]

libc = "0.2"


[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "0.3"
features = ["winbase", "handleapi", "memoryapi", "std"]
